fixed /synchronize overflow

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -305,7 +305,7 @@ main
         display: flex
         justify-content: flex-start
         align-items: flex-end
-        @media screen and ( max-width: $breakpoint-mobile)
+        @media screen and ( max-width: $breakpoint-tablet)
           flex-direction: column
           align-items: flex-start
         &:first-child
